[package]

name = "cedar-java-ffi"
license = "Apache-2.0"
description = "Java FFI for Cedar (from the cedar-policy crate)."
edition = "2021"


version = "3.4.0"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
itertools = "0.12"

# JNI Support
jni = "0.21.0"
jni_fn = "0.1.0"

[features]
partial-eval = ["cedar-policy/partial-eval"]

# Dynamic linked library, used for linked to java process at runtime.
[lib]
crate_type = ["cdylib"]

[dependencies.cedar-policy]
version = "3.4"

[dependencies.cedar-policy-formatter]
version = "3.4"
