[package]

name = "cedar-java-ffi"
license = "Apache-2.0"
description = "Java FFI for Cedar (from the cedar-policy crate)."
edition = "2021"


version = "4.0.0"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "2.0"
itertools = "0.14"

# JNI Support
jni = "0.21.1"
jni_fn = "0.1.0"

[features]
partial-eval = ["cedar-policy/partial-eval"]

[dev-dependencies]
cool_asserts = "2.0"
jni = { version = "0.21.1", features = ["invocation"] }

# Dynamic linked library, used for linked to java process at runtime.
[lib]
crate_type = ["cdylib"]

[dependencies.cedar-policy]
version = "4.0.0"
git = "https://github.com/cedar-policy/cedar"
branch = "main"

[dependencies.cedar-policy-formatter]
version = "4.0.0"
git = "https://github.com/cedar-policy/cedar"
branch = "main"
